# nand2tetris-vm-backend-python

./: .gitignore  README.md  pyproject.toml
pyhackvm/: cli.py
pyvmbackend/: cli.py
