[tool.poetry]
name = "pyvmbackend"
version = "0.1.0"
description = "VM to ASM translator"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.2"

[tool.poetry.scripts]
pyvm = "pyvmbackend.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
