[tool.poetry]
name = "pyhackvm"
version = "0.1.0"
description = "IRL VM for Hack language and Jack ASM"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pyvm = "pyhackvm.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
